rust/kcl-lib/tests/panic_repro_cube/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing panic_repro_cube.kcl
---
KCL Semantic error

  × semantic: The input argument of `getNextAdjacentEdge` requires a value
  │ with type `tagIdent`, but found Edge
    ╭─[43:5]
 42 │     // these double wrapped functions are the point of this test
 43 │     getNextAdjacentEdge(getNextAdjacentEdge(seg01)),
    ·     ───────────────────────┬───────────────────────┬
    ·                            │                       ╰── tests/panic_repro_cube/input.kcl
    ·                            ╰── tests/panic_repro_cube/input.kcl
 44 │     getNextAdjacentEdge(getNextAdjacentEdge(seg02))
    ╰────
  ╰─▶ KCL Semantic error
      
        × semantic: The input argument of `getNextAdjacentEdge` requires a
        │ value with type `tagIdent`, but found Edge
          ╭─[43:25]
       42 │     // these double wrapped functions are the point of this test
       43 │     getNextAdjacentEdge(getNextAdjacentEdge(seg01)),
          ·                         ─────────────┬────────────
          ·                                      ╰── tests/panic_repro_cube/
      input.kcl
       44 │     getNextAdjacentEdge(getNextAdjacentEdge(seg02))
          ╰────
